--- a/nouislider/nouislider.css
+++ b/nouislider/nouislider.css
@@ -71,6 +71,7 @@
 .noUi-touch-area {
   height: 100%;
   width: 100%;
+  cursor: pointer;
 }
 .noUi-state-tap .noUi-connect,
 .noUi-state-tap .noUi-origin {
@@ -83,20 +84,20 @@
 /* Slider size and handle placement;
  */
 .noUi-horizontal {
-  height: 18px;
+  height: 10px;
 }
 .noUi-horizontal .noUi-handle {
-  width: 34px;
-  height: 28px;
-  right: -17px;
+  width: 20px;
+  height: 20px;
+  right: -10px;
   top: -6px;
 }
 .noUi-vertical {
   width: 18px;
 }
 .noUi-vertical .noUi-handle {
-  width: 28px;
-  height: 34px;
+  width: 20px;
+  height: 20px;
   right: -6px;
   bottom: -17px;
 }
@@ -117,7 +118,7 @@
   border-radius: 3px;
 }
 .noUi-connect {
-  background: #3FB8AF;
+  background: #ff5635;
 }
 /* Handles and cursors;
  */
@@ -137,32 +138,7 @@
 .noUi-active {
   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
 }
-/* Handle stripes;
- */
-.noUi-handle:before,
-.noUi-handle:after {
-  content: "";
-  display: block;
-  position: absolute;
-  height: 14px;
-  width: 1px;
-  background: #E8E7E6;
-  left: 14px;
-  top: 6px;
-}
-.noUi-handle:after {
-  left: 17px;
-}
-.noUi-vertical .noUi-handle:before,
-.noUi-vertical .noUi-handle:after {
-  width: 14px;
-  height: 1px;
-  left: 6px;
-  top: 14px;
-}
-.noUi-vertical .noUi-handle:after {
-  top: 17px;
-}
+
 /* Disabled state;
  */
 [disabled] .noUi-connect {
